--- a/statamic/_themes/main/templates/landing.html
+++ b/statamic/_themes/main/templates/landing.html
@@ -97,7 +97,7 @@
 			<div class="circle white">
 				{{ theme:partial src="svg/home_book" }}
 			</div>
-			<h4>LATEST NEWS &amp; INSIGHTS</h4>
+			<h4>NEWS &amp; INSIGHTS</h4>
 		
 
 		</div>
@@ -105,21 +105,21 @@
 			<div class="grid-4 centered">
 				<a data-toggle="modal" data-target="#contact-modal" href="#" class="insight-tile">
 					<h3>Get a Valuation</h3>
-					<p>Make a more informed decision about your property with a Garfield Valuation.</p>
+					<p>Make a more informed decision about your property with a Garfield Valuation</p>
 					<span>GET IN CONTACT ></span>
 				</a>
 			</div>
 			<div class="grid-4 centered">
 				<a href="{{ site_url }}blog" class="insight-tile">
-					<h3>Latest Opinion</h3>
-					<p>The latest thoughts and opinions on New York Real Estate from the Garfield team</p>
+					<h3>Latest Thinking</h3>
+					<p>Opinions and commentary on New York Real Estate from the Garfield team</p>
 					<span>VISIT OUR BLOG ></span>
 				</a>
 			</div>
 			<div class="grid-4 centered">
 				<a href="{{ site_url }}reports" class="insight-tile">
-					<h3>Research &amp; Insights</h3>
-					<p>Trends, analysis and forecasts for New York’s small buildings and townhouse market</p>
+					<h3>Research &amp; Analysis</h3>
+					<p>Trends and forecasts for New York’s townhouse and small building markets</p>
 					<span>SEE THE LATEST REPORT ></span>
 				</a>
 			</div>
