--- a/statamic/_themes/main/templates/properties.html
+++ b/statamic/_themes/main/templates/properties.html
@@ -17,7 +17,7 @@
           "streeteasy_status": "{{ streeteasy_status }}",
           "openhouse": "{{ openhouse }}",
           "price": "{{ price }}",
-          "currency": "$",
+          "currency": "{{ currency }}",
           "property_type": "{{ property_type }}",
           "sqft": "{{ sqft }}",
           "property_location": "{{ property_location }}"
@@ -34,7 +34,7 @@
           "streeteasy_status": "{{ streeteasy_status }}",
           "openhouse": "{{ openhouse }}",
           "price": "{{ price }}",
-          "currency": "$",
+          "currency": "{{ currency }}",
           "property_type": "{{ property_type }}",
           "sqft": "{{ sqft }}",
           "results": "{{ total_results }}",
@@ -56,7 +56,7 @@
           "streeteasy_status": "{{ streeteasy_status }}",
           "openhouse": "{{ openhouse }}",
           "price": "{{ price }}",
-          "currency": "$",
+          "currency": "{{ currency }}",
           "property_type": "{{ property_type }}",
           "sqft": "{{ sqft }}",
           "results": "{{ total_results }}",
@@ -74,7 +74,7 @@
           "streeteasy_status": "{{ streeteasy_status }}",
           "openhouse": "{{ openhouse }}",
           "price": "{{ price }}",
-          "currency": "$",
+          "currency": "{{ currency }}",
           "property_type": "{{ property_type }}",
           "sqft": "{{ sqft }}",
           "results": "{{ total_results }}",
