--- a/statamic/_themes/main/partials/blog_social.html
+++ b/statamic/_themes/main/partials/blog_social.html
@@ -8,7 +8,7 @@
 	<a href="https://twitter.com/intent/tweet?url={{ _site_url }}{{ url }}">
 		<i class="fa fa-twitter fa-lg"></i>
 	</a>
-	<a href="javascript:selectPinImage()">
+	<a href="javascript:pinIt();">
 		<i class="fa fa-pinterest fa-lg"></i>
 	</a>
 	<a class="fb" 
