--- a/statamic/_themes/main/partials/featured_post.html
+++ b/statamic/_themes/main/partials/featured_post.html
@@ -10,13 +10,17 @@
 			</a>
 		{{ /relate:author }}
 		<div class="social block left-align green">
-			<a href="">
+			<a href="https://twitter.com/intent/tweet?url={{ _site_url }}{{ url }}">
 				<i class="fa fa-twitter fa-lg"></i>
 			</a>
-			<a href="javascript:selectPinImage()">
+			<a href="javascript:pinIt();">
 				<i class="fa fa-pinterest fa-lg"></i>
 			</a>
-			<a href="javascript:fbShare('{{ url }}', 'Fb Share', '{{ url }}', '{{ url }}', 500, 250)">
+			<a class="fb" 
+			data-title="{{ title }}" 
+			data-desc="Property listed at Leslie Garfield" 
+			data-image="{{ preview_image}}"
+			href="{{ _site_url }}{{ url }}">
 				<i class="fa fa-facebook fa-lg"></i>
 			</a>
 		</div>
