--- a/statamic/_themes/main/templates/properties_international.html
+++ b/statamic/_themes/main/templates/properties_international.html
@@ -12,7 +12,7 @@
           "streeteasy_status": "{{ streeteasy_status }}",
           "openhouse": "{{ openhouse }}",
           "price": "{{ price }}",
-          "currency": "$",
+          "currency": "{{ currency }}",
           "property_type": "{{ property_type }}",
           "sqft": "{{ sqft }}",
           "property_location": "{{ property_location }}"
@@ -26,7 +26,7 @@
           "streeteasy_status": "{{ streeteasy_status }}",
           "openhouse": "{{ openhouse }}",
           "price": "{{ price }}",
-          "currency": "$",
+          "currency": "{{ currency }}",
           "property_type": "{{ property_type }}",
           "sqft": "{{ sqft }}",
           "property_location": "{{ property_location }}"
@@ -46,6 +46,7 @@
           "streeteasy_status": "{{ streeteasy_status }}",
           "openhouse": "{{ openhouse }}",
           "price": "{{ price }}",
+          "currency": "{{ currency }}",
           "property_type": "{{ property_type }}",
           "sqft": "{{ sqft }}",
           "property_location": "{{ property_location }}"
@@ -59,6 +60,7 @@
           "streeteasy_status": "{{ streeteasy_status }}",
           "openhouse": "{{ openhouse }}",
           "price": "{{ price }}",
+          "currency": "{{ currency }}",
           "property_type": "{{ property_type }}",
           "sqft": "{{ sqft }}",
           "property_location": "{{ property_location }}"
