--- a/src/scss/modules/_forms.scss
+++ b/src/scss/modules/_forms.scss
@@ -8,15 +8,24 @@
 	}
 	.form-full {
 		@include span(full no-gutter break);
+		@include clearfix;
 		textarea {
 			height: 100px;
 			text-align: top;
 		}
 	}
+	.form-half {
+		@include breakpoint($medium) {
+			@include span(6 of 12 no-gutter);
+			@include pre(3 of 13);		
+		}
+
+	}
+
 	form {
 		text-align: center;
 	}
-	input[type=text], input[type=email], input[type=date], input[type=time], textarea {
+	input[type=text], input[type=email], input[type=date], input[type=time],select, textarea {
 		@include span(full);
 		margin-bottom: gutter(6);
 		padding: 10px 10px;
@@ -36,7 +45,17 @@
 	}
 }
 
-input {
+.input-clear select {
+	padding: 20px;
+	height: 47px;
+	border-radius: 2px;
+
+	@include breakpoint($medium) {
+		padding: 30px;
+	}
+}
+
+input, select {
 	color: $dark-gray;
 	&.btn-garfield {
 		margin: auto;
