--- a/statamic/_themes/main/templates/contact.html
+++ b/statamic/_themes/main/templates/contact.html
@@ -2,44 +2,37 @@
 <section class="bg-seafoam">
 	<div class="container">
 		<div class="contact">
-			<div class="info">
-			<h3>Contact</h3>
-			<div>{{ theme:partial src="svg/phone" }}<span>{{ globals:phone }}</span></div>
-			<div><a href="{{ globals:email_contact }}">{{ theme:partial src="svg/mail" }}<span>{{ globals:email_info }}</span></a></div>
-			<br>
-			<div>{{ theme:partial src="svg/maps" }}<span>{{ globals:address_line1 }}</span></div>
-			<div class="line-two">{{ globals:address_line2 }}</div>
-			<br>
-			<div class="map"><a href="https://www.google.com/maps/place/Leslie+J+Garfield+%26+Co+Inc/@40.7628871,-73.969216,15z/data=!4m2!3m1!1s0x0:0x85a98881e26d3228?sa=X&ved=0CGcQ_BIwCmoVChMIseGKqtLWyAIVDfZjCh2bXwGM" target="blank"></a></div>
-			</div>
 
-			<div class="sales">
-			<h3>Sales Enquiries</h3>
 			<div class="input-clear">
-        {{ raven:form formset="general_enquiries" attr="class:multi" return="/success"}}
+        {{ raven:form formset="general_enquiries" attr="class:multi" }}
         
-     		<div class="form-full">
-        	<input type="text" value="" placeholder="First Name" name="first_name" class="input">
+     		<div class="form">
+        	<input type="text" value="" placeholder="Name*" name="name" class="input">
+        </div>
+        <div class="form">
+        	<input type="email" value="" placeholder="Email Address*" name="email" class="input">
+        </div>
+        <div class="form">
+					<select name="regarding" value="">
+				    <option value="" disabled selected>What is this regarding?</option>
+				    <option value="general_question">General question</option>
+				    <option value="customer_support">Customer support / feedback</option>
+				    <option value="selling_leasing">Selling / leasing my property</option>
+				    <option value="press">Press</option>
+					</select>
+     		</div>
+        <div class="form">
+        	<input type="text" value="" placeholder="Phone(optional)" name="phone" class="input">
         </div>
         <div class="form-full">
-        	<input type="text" value="" placeholder="Last Name" name="last_name" class="input">
+        	<textarea value="" placeholder="Message" name="message"></textarea>
         </div>
-        <div class="form-full">
-     			<input type="email" value="" placeholder="Email" name="email" class="input required email">
-     		</div>
-        <div class="form-full">
-     			<input type="text" value="" placeholder="Phone Number" name="phone" class="input">
-     		</div>
-        <div class="form-full">
+        <div class="form-half">
         	<input type="submit" value="SEND" name="subscribe" class="btn-garfield">
         </div>
 
-
         {{ /raven:form }}
 			</div>
-			</div>
-
-
 		</div>
 	</div>
 </section>
