--- a/statamic/_themes/main/partials/property_tile.html
+++ b/statamic/_themes/main/partials/property_tile.html
@@ -7,20 +7,10 @@
 		</div>
 		<div class="property_tile_info">
 			<div class="top-info">
-				<span class="prop-title">{{ title }}{{if apartment }}, {{ apartment }}{{ endif }}</span>
+				<span class="prop-title">{{ title }}</span>
 				<div class="spacer"></div>
 				<span class="prop-price">
-				{{ if currency|not_empty }}
-				{{ if currency == "sterling" }}
-				&#163;{{ price|format_number }}
-				{{ elseif currency == "euros" }}
-				&#128;{{ price|format_number }}
-				{{ elseif currency == "dollar" }}
-				${{ price|format_number }}
-				{{ endif }}
-				{{ else }}
-				${{ price|format_number }}
-				{{ endif }}
+				{{ if currency == "dollars" }}${{ elseif currency == "sterling" }}£{{ elseif currency == "euros" }}€{{ else }}{{ endif }}{{ price|format_number }}
 				</span>
 				<div class="spacer"></div>
 				<span class="prop-details">{{ property_type }}</span>
