--- a/statamic/_themes/main/templates/streeteasy.html
+++ b/statamic/_themes/main/templates/streeteasy.html
@@ -10,7 +10,7 @@
 		{{ if apartment|not_empty }}
 		<apartment>{{ apartment }}</apartment>
 		{{ else }}
-		<apartment />
+		<apartment>house</apartment>
 		{{ endif }}
 		{{ if city|not_empty }}
 		<city>{{ city }}</city>
@@ -143,7 +143,7 @@
 		{{ if apartment|not_empty }}
 		<apartment>{{ apartment }}</apartment>
 		{{ else }}
-		<apartment />
+		<apartment>house</apartment>
 		{{ endif }}
 		{{ if city|not_empty }}
 		<city>{{ city }}</city>
