--- a/statamic/_themes/main/partials/nav.html
+++ b/statamic/_themes/main/partials/nav.html
@@ -20,7 +20,7 @@
         {{ endif }}
         {{ endif }}
         {{ /nav }}
-        {{ nav from="/" max_depth="1" exclude="properties|faq|contact"}}
+        {{ nav from="/" max_depth="1" exclude="properties|faq|contact|map"}}
         <li><a href="{{ url }}"{{ if is_current || is_parent }} class="current"{{ endif }}>{{ title }} </a>
          {{ if is_current || is_parent }}
          {{ if children }}
@@ -30,7 +30,7 @@
         {{ endif }}
         {{ endif }}
         {{ /nav }}
-        {{ nav from="/" exclude="properties|agents|services|company|neighborhoods|reports|blog|faq" }}
+        {{ nav from="/" exclude="properties|agents|services|company|neighborhoods|reports|blog|faq|map" }}
         <li><a href="{{ url }}"{{ if is_current || is_parent }} class="btn-contact current"{{ else }} class="btn-contact"{{ endif }}>{{ title }} </a>
          {{ if is_current || is_parent }}
          {{ if children }}
