--- a/src/scss/components/_property_individual.scss
+++ b/src/scss/components/_property_individual.scss
@@ -71,7 +71,7 @@
 		.location {
 			@include span (full no-gutter);
 			&.split {
-				@include span (full);
+				@include span (full no-gutter);
 			}
 		}
 		.open-house {
