--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -3651,9 +3651,7 @@ footer .footer-divider {
 .property-info .location {
   box-sizing: border-box;
   width: 100%;
-  float: left;
-  padding-left: 1.25%;
-  padding-right: 1.25%; }
+  float: left; }
 
 .property-info .content {
   padding-left: 30px;
@@ -3694,9 +3692,10 @@ footer .footer-divider {
   color: #999999; }
 
 .property-info .property-subheader .location {
-  box-sizing: border-box;
   width: 100%;
-  float: left; }
+  float: left;
+  margin-left: 0;
+  margin-right: 0; }
 
 .property-info .property-subheader .location.split {
   box-sizing: border-box;
