--- a/src/scss/components/_property_individual.scss
+++ b/src/scss/components/_property_individual.scss
@@ -42,7 +42,7 @@
 	background-color: #fff;
 	@include clearfix;
 	.location {
-		@include span (full);
+		@include span (full no-gutter);
 	}
 	.content {
 		padding-left: 30px;
@@ -69,7 +69,7 @@
 			color: $light-font-color;
 		}
 		.location {
-			@include span (full no-gutter);
+			@include span (full no-gutter after);
 			&.split {
 				@include span (full no-gutter);
 			}
