--- a/statamic/_themes/main/templates/property.html
+++ b/statamic/_themes/main/templates/property.html
@@ -77,7 +77,7 @@
 						<span>{{ location_granular }}</span>
 						{{ endif }}
 					</div>
-					{{ if openhouse or streeteasy_status !== "Active"}}
+					{{ if openhouse or streeteasy_status !== "active"}}
 					<div class="open-house">
 						{{ if openhouse }}
 						{{ openhouse_grid }}
