--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -2492,7 +2492,8 @@ p.intro-section {
 
 .Select-placeholder {
   color: #aaaaaa;
-  padding: 8px 52px 8px 10px;
+  padding: 9px 52px 9px 10px;
+  border: 1px solid transparent;
   position: absolute;
   top: 0;
   left: 0;
@@ -2506,7 +2507,8 @@ p.intro-section {
   outline: none; }
 
 .has-value > .Select-control > .Select-placeholder {
-  color: #333333; }
+  color: #333333;
+  border: 1px solid transparent; }
 
 .Select-input > input {
   cursor: default;
