--- a/statamic/_themes/main/css/main.css
+++ b/statamic/_themes/main/css/main.css
@@ -4183,6 +4183,21 @@ footer .footer-divider {
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%); }
 
+.agent-individual main .green-specs .press-item .carousel-image-container {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-flex-flow: column nowrap;
+  -ms-flex-flow: column nowrap;
+  flex-flow: column nowrap;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  height: 114px; }
+
 .agent-individual main .green-specs .press-item p, .agent-individual main .green-specs .press-item img {
   text-align: center;
   margin: 0 auto;
