--- a/statamic/_themes/main/partials/press_item.html
+++ b/statamic/_themes/main/partials/press_item.html
@@ -3,7 +3,9 @@
  <div class="carousel-tile press-item">
 	<div>
 		{{ if image|not_empty }}
+		<div class="carousel-image-container">
 		<img src="{{ path src="{{ image }}" }}">
+		</div>
 		{{ endif }}
 		{{ if text|not_empty }}
 		<p>{{ text }}</p>
@@ -14,7 +16,9 @@
  <a target="_blank" href="{{ link or file }}" class="carousel-tile press-item">
 	<div>
 		{{ if image|not_empty }}
+		<div class="carousel-image-container">
 		<img src="{{ path src="{{ image }}" }}">
+		</div>
 		{{ endif }}
 		{{ if text|not_empty }}
 		<p>{{ text }}</p>
