--- a/src/scss/components/_agent_individual.scss
+++ b/src/scss/components/_agent_individual.scss
@@ -129,6 +129,7 @@
 				padding: 0 15px;
 				div {
 					@include vertical-align;
+					height: 114px;
 				}
 				.carousel-image-container {
 					@include flex-vert;
