--- a/src/scss/components/_agent_individual.scss
+++ b/src/scss/components/_agent_individual.scss
@@ -128,7 +128,7 @@
 				margin: 0;
 				padding: 0 15px;
 				div {
-					@include vertical-align;
+					@include flex-vert;
 					height: 114px;
 				}
 				.carousel-image-container {
