--- a/src/scss/components/_property_nav.scss
+++ b/src/scss/components/_property_nav.scss
@@ -69,6 +69,10 @@
 		margin: 0;
 	}
 	.nav {
+		display: none;
+		@include breakpoint($small) {
+			display: inline-block;
+		}
 		a {
 			background-color: #fff;
 			color: $base-font-color;
